--- a/App/Templates/index.html
+++ b/App/Templates/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title> Document</title>
-    <link rel= "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    <title> Mission to Mars</title>
+
+    <link 
+    rel= "stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
 </head>
+
 <body>
     <div class="container">
         <!-- Add Jumbotron to Header -->
@@ -46,6 +50,20 @@
                     <h4>Mars Facts</h4>
                     {{mars.facts | safe}}
                 </div>
+            </div>
+        </div>
+        <!--Section for Mars Hemisphere Images -->
+        <div class="row" id="mars-hemisphere">
+            <div class="col-md-12">
+                <h2><center>Mars Hemispheres</center></h2>
+                {% for hemisphere in mars.hemispheres %}
+                    <div class="col-md-3">
+                        <div class = "thumbnail">
+                            <img src="{{hemisphere.img_url}}"
+                              <h2><b>{{hemisphere.title}}</b></h2>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
 
